--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@
             <p>New customer? <u>start here</u></p>
     </div>
 <footer>
-    <div class="border-1 w[1000px] h-10 ml-2 bg-gray-500 text-center mt-5">
+    <div class="border-1 w-full h-10 ml-2 bg-gray-500 text-center mt-5">
         <p class="mt-2 text-white">back to top</p>
 
     </div>
