--- a/src/index.html
+++ b/src/index.html
@@ -340,7 +340,7 @@
 
     </div>
    
-        <div class=" border-1 w-[1000px] mt- ml-3 mr-5 bg-gray-900 h-20">
+        <div class=" border-1 w-full mt- ml-3 mr-5 bg-gray-900 h-20">
       <div class=" flex justify-center mt-5 text-white gap-2 ">
 
         <div >
