--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,7 @@
         <p class="mt-2 text-white">back to top</p>
 
     </div>
-    <div class=" border-1 h-90 w-[1000px] ml-2 bg-gray-800 text-white">
+    <div class=" border-1 h-90 w-full ml-2 bg-gray-800 text-white">
         <div class="flex gap-35 mt-10 px-10">
             <div>
             <p> <b>Get us to <br>know</b></p>
