--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
 
         </div>
 
-    <div class="flex gap-2">
+    <div class="flex  justify-between">
          <div class="border-1 mt-5 ml-5 w-[310px] h-[450px] p-3">
         <h1 class="text-2xl ">Revamp your home in style</h1>
         <div class="flex gap-5">
@@ -340,9 +340,9 @@
 
     </div >
 
-
+    
    
-        <div class=" border-1 w-full mt- ml-3  bg-gray-900 h-20">
+        <div class=" border-1 w-full mt- ml-3 mr-5 bg-gray-900 h-20">
       <div class=" flex justify-center mt-5 text-white gap-2 ">
 
         <div >
