--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
 
         </div>
 
-    <div class="flex  justify-between">
+    <div class="flex  justify-between px-10">
          <div class="border-1 mt-5 ml-5 w-[310px] h-[450px] p-3">
         <h1 class="text-2xl ">Revamp your home in style</h1>
         <div class="flex gap-5">
