--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
         </div>
 
     </nav>
-    <!-- <div class="flex justify-between ">
+     <div class="flex justify-between ">
        
         <div class="border-1 mt-5 ml-5 w-[320px] h-[450px] p-3">
         <h1 class="text-2xl ">Revamp your home in style</h1>
@@ -172,7 +172,7 @@
 
 
 
-        </div> -->
+        </div> 
 
 
         
