--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
 
     
    
-        <div class=" border-1 w-full mt- ml-3 mr-5 bg-gray-900 h-20">
+        <div class=" border-1 w-full  px-10 bg-gray-900 h-20">
       <div class=" flex justify-center mt-5 text-white gap-2 ">
 
         <div >
